0.2:
- 3D planet is now zoomed randomly from any corner, from PhracturedBlue
- Flagship thrusters and modules one-pixel place fix, from TDuck
- Earth topo map is now tinted as should, from PhracturedBlue
- Fixed planet stuff when leaving surface with lander, from PhracturedBlue
- RotatePlanet now holds GraphicsSem a shorter time, from PhracturedBlue
- Added proper mutex usage to 3do_getbody.c, from PhracturedBlue
- Scan uses now additive blit instead of transparency, from PhracturedBlue
- Loading game saved while in orbit fixed (bg correct), from PhracturedBlue
- Changed SDL_Delay to SleepThread in TFB_FlushGraphics
- Rendering thread now broadcasts to a condition variable, stopping most
  of the problems we were having where a fast thread spams the DCQ with
  too many requests to handle in a timely manner
- Fixed an unsafe memory freeing from sfx.c
- Thread library now includes condition variables
- Shofixti dialogue fixed to subtitles, by BlckKnght
- Crash during loading from orbit fixed, from PhracturedBlue
- Starmap issue when orbiting earth fixed, from PhracturedBlue
- Oscilloscope is now implemented (OpenAL)
- Moved initialisation of _MemorySem to memInit - SvdB
- Planet scan is now cleared correctly, from l0ci
- Flagship modules are now drawn correctly instead of one pix left, from l0ci
- Planet code fixes, from PhracturedBlue
- Build fixes for FreeBSD, from Max Horn.
- Fixed typo in Thraddash text, from Dan Plimak.
- Make HMalloc abort when no memory available, from Abaddon.
- Replace malloc() calls by HMalloc, from Abaddon.
- #include <SDL.h> in main program, for OSX, from Max Horn.
- Use sources for getopt() for all systems that don't support it, not only
  for Windows, from Max Horn.
- Planet code cleanups, from PhracturedBlue
- Changed some types to SDLKey in input.c to prevent overflows, from tamlin
- Slider now moves in communications (OpenAL)
- Fixed a DCQ bug where it wasn't freeing batches of graphics commands