@@ -35,10 +35,10 @@ InitGraphics (int argc, char* argv[], COUNT KbytesRequired)
 {
 	BOOLEAN ret;
 
+	TFB_DrawCommandQueue_Create ();
+
 	LoadDisplay (&_pCurDisplay);
 	ActivateDisplay ();
-
-	DrawCommandQueue = TFB_DrawCommandQueue_Create ();
 
 	ret = TRUE;
 	return (ret);
