@@ -1,4 +1,6 @@
 0.2:
+- Recoded the DCQ to not sit on the heap, added debugging info
+- Fixed Outfit Starship and Shipyard graphics, from TDuck
 - 3D planet is now zoomed randomly from any corner, from PhracturedBlue
 - Flagship thrusters and modules one-pixel place fix, from TDuck
 - Earth topo map is now tinted as should, from PhracturedBlue
